cmake_minimum_required(VERSION 3.5)
project(LiteKV)
set(EXECUTABLE_OUTPUT_PATH "${LITEKV_SOURCE_DIR}/bin")

add_executable_and_link(benchmark_dict "benchmark_dict.cpp" "${LITEKV_SRC}" "${LIBS}")
add_executable_and_link(benchmark_int "benchmark_int.cpp" "${LITEKV_SRC}" "${LIBS}")
add_executable_and_link(benchmark_string "benchmark_string.cpp" "${LITEKV_SRC}" "${LIBS}")
add_executable_and_link(benchmark_list "benchmark_list.cpp" "${LITEKV_SRC}" "${LIBS}")

if (TCMALLOC_LIB)
  target_compile_options(benchmark_int PRIVATE -O2 -DTCMALLOC_FOUND)
  target_link_libraries(benchmark_int tcmalloc)
  target_compile_options(benchmark_string PRIVATE -O2 -DTCMALLOC_FOUND)
  target_link_libraries(benchmark_string tcmalloc)
  target_compile_options(benchmark_list PRIVATE -O2 -DTCMALLOC_FOUND)
  target_link_libraries(benchmark_list tcmalloc)
  target_compile_options(benchmark_dict PRIVATE -O2 -DTCMALLOC_FOUND)
  target_link_libraries(benchmark_dict tcmalloc)
endif(TCMALLOC_LIB)